# pythonasia

./: .env.example  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  Makefile  README.md  index.html  pyproject.toml  render.yaml
.github/workflows/actions/install-env/: action.yml
.github/workflows/workflows/: main.yml
app/home/: views.py
app/home/templates/home/: index.html
app/home/templates/home/components/: navbar.html
app/home/templates/home/sections/: about-us.html  announcement-section.html  call-for-x.html  code-of-conduct.html  conference-at-a-glance.html  footer.html  hero-section.html  speakers-section.html  sponsor-section.html  tickets-section.html  what-is-python-asia.html  when-where-section.html  why-python.html
app/presentations/: apps.py
app/speakers/: admin.py  apps.py  models.py
app/speakers/migrations/: 0001_initial.py
app/sponsors/: admin.py  apps.py  models.py
app/sponsors/migrations/: 0001_initial.py
config/: asgi.py  context_processors.py  environment.py  settings.py  urls.py  wsgi.py
deploy/: build.sh  start.sh
services/: pretalx_service.py
src/styles/: globals.css  main.css
static/css/: app.css  tailwind.css
templates/: base.html  opengraph.html
