[project]
name = "pythonasia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-tailwind-cli>=4.4.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "sentry-sdk[django]>=2.39.0",
    "whitenoise[brotli]>=6.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
]
